# DGIIM

./: .gitignore  LICENSE  README.md  Usar Git y GitHub.md
Código aparte/: Conecta4.c
Erasmus Gdasnk (Cuarto)/ALG/FFT Algorithm/: Assignment1.tar  Results.ods
Erasmus Gdasnk (Cuarto)/ALG/FFT Algorithm/.ipynb_checkpoints/: Code-checkpoint.ipynb
Erasmus Gdasnk (Cuarto)/ALG/FFT and Polynomials/: Code.ipynb
Erasmus Gdasnk (Cuarto)/ALG/FFT and Polynomials/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
Erasmus Gdasnk (Cuarto)/ALG/QuickSort/: Code.ipynb
Erasmus Gdasnk (Cuarto)/ALG/QuickSort/.ipynb_checkpoints/: Code-checkpoint.ipynb
Erasmus Gdasnk (Cuarto)/AlgebraII/: main.tex
Erasmus Gdasnk (Cuarto)/Cryptography/Elliptic Curve/: Code.py
Erasmus Gdasnk (Cuarto)/Cryptography/Elliptic Curve/.ipynb_checkpoints/: Code-checkpoint.ipynb  Untitled-checkpoint.ipynb
Erasmus Gdasnk (Cuarto)/Cryptography/Substitution Ciphers/: SubstituionCypher.ipynb  Untitled.ipynb
Erasmus Gdasnk (Cuarto)/Cryptography/The Diffie-Hellman Key Exchange/.ipynb_checkpoints/: The Diffie-Hellman Key Exchange-checkpoint.ipynb
Erasmus Gdasnk (Cuarto)/Game Theory/Presentacion/: nim.py
Erasmus Gdasnk (Cuarto)/IG/Practica2/: compile  demo  demo.c  makefile  pusty  pusty.c
Erasmus Gdasnk (Cuarto)/SAS Programming/: Laboratory1.md  Laboratory2.md  Laboratory3.md  Laboratory5.md  Laboratory6.md  Laboratory8.md  Laboratory9.md
Primero/: README.md
Primero/1 Cuatrimestre/: AVISO.md
Primero/1 Cuatrimestre/Algebra I/: README.md
Primero/1 Cuatrimestre/FFT/: PENDIENTE.md
Primero/1 Cuatrimestre/FP/Sesión 1/: 2_Interés bancario.cpp  3_Circunferencia.cpp  4_Gaussiana.cpp  6_Intercambiador de variables.cpp
Primero/1 Cuatrimestre/FP/Sesión 10/: 15_Cadena de caracteres.cpp  16_Moda.cpp  17_ParesImparesç.cpp  18_Poligono.cpp
Primero/1 Cuatrimestre/FP/Sesión 14/: Libro.cpp
Primero/1 Cuatrimestre/Geometria I/: Readme.md
Primero/1 Cuatrimestre/TOC/: Informacion.md
Primero/2 Cuatrimestre/: Sin título 1.odt
Primero/2 Cuatrimestre/Cálculo II/Apuntes/: Infinitésimos equivalentes.md
Primero/2 Cuatrimestre/EDIP/: 1 Variable.xlsx  Hoja_Definitiva_de_EDIP.xlsx
Primero/2 Cuatrimestre/EDIP/Relaciones Resueltas/: r3.tex
Primero/2 Cuatrimestre/FS/: EJERCICIO REPASO PRÁCTICA 1 A 5-MÓDULO 1.md  Ejercicios Tema 2.md
Primero/2 Cuatrimestre/FS/Apuntes/: Comandos Prácticas Fundamentos del Software.md
Primero/2 Cuatrimestre/FS/Ejericios bash/: Ejercicio Pŕactica 7.md  Ejercicio1.sh  Ejercicios Práctica 6.md  Práctica 7.md  Práctica 8.md
Primero/2 Cuatrimestre/MN/Practicas/: e4alconchelvázquezdaniel.wxmx
Primero/2 Cuatrimestre/MP/Apuntes/: Apuntes Metodología de la Programación.md
Primero/2 Cuatrimestre/MP/Ejercicios/: Acabar.cpp  ColeccionCoches.cpp  Factorización Recursiva.cpp  Frecuencia de enteros.cpp  Imagen.cpp  Matriz Bilineal.cpp  Menu.cpp  PoliLinea.cpp  Término n-ésimo Recursivo-1.cpp  Vocales Recursivas.cpp
Quinto/DAI/: practicas.md
Quinto/DAI/P0/: docker-compose.yml
Quinto/IG/Teoria/opengl3-minimo-main/: LICENSE  README.md
Quinto/IG/Teoria/opengl3-minimo-main/builds/linux/: CMakeLists.txt  workspace.code-workspace
Quinto/IG/Teoria/opengl3-minimo-main/builds/macos/: CMakeLists.txt  workspace.code-workspace
Quinto/IG/Teoria/opengl3-minimo-main/builds/windows/: CMakeLists.txt  README.md  limpiar.ps1  workspace.code-workspace
Quinto/IG/ig-pracs-plantilla/: examen-ec-p123.cpp  examen-ec-p123.h
Quinto/IG/ig-pracs-plantilla/builds/linux/: CMakeLists.txt  workspace.code-workspace
Quinto/IG/ig-pracs-plantilla/builds/linux/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
Quinto/IG/ig-pracs-plantilla/builds/macos/: CMakeLists.txt  workspace.code-workspace
Quinto/IG/ig-pracs-plantilla/builds/windows/: CMakeLists.txt  compilar.ps1  ejecutar.ps1  generar.ps1  workspace.code-workspace
Quinto/IG/ig-pracs-plantilla/src/: animacion.cpp  animacion.h  aplicacion-ig.cpp  aplicacion-ig.h  camara.cpp  camara.h  escena.cpp  escena.h  eventos-raton.cpp  eventos-raton.h  eventos-teclado.cpp  eventos-teclado.h  grafo-escena.cpp  grafo-escena.h  latapeones.cpp  latapeones.h  main.cpp  malla-ind.cpp  malla-ind.h  malla-revol.cpp  malla-revol.h  materiales-luces.cpp  materiales-luces.h  modelo-jer.cpp  modelo-jer.h  objeto3d.cpp  objeto3d.h  seleccion.cpp  seleccion.h  vaos-vbos.cpp  vaos-vbos.h
Quinto/Multivariante/Practicas/MultivariateProject/: AlconchelVazquezDaniel.Rmd
Quinto/Multivariante/Practicas/PCA Practice 1.1-20230928/: Data sets.rar  PCA_1.1.Rmd  PCA_1.1.html
Quinto/SPSI/P1/: clave.txt  gdh_base64.txt  gdh_cifrado.ec  quijote_cap_01.txt  timing.txt
Quinto/SPSI/P2/: script1.sh
Quinto/SPSI/P2/pract_03_smime/: explicacion.sh  gdh.pdf.2.sgn
Quinto/SPSI/Trabajo Hill/: Untitled.ipynb
Segundo/1 Cuatrimestre/EC/Prácticas/: README.md  Resumen Práctica.md
Segundo/1 Cuatrimestre/ED/Retos/: Reto 1. Eficiencia.md
Segundo/1 Cuatrimestre/ED/examen/: 2.cpp  3.cpp  4.cpp  bintree.h  bintree.hxx  node.hxx
Segundo/1 Cuatrimestre/SO/: CUESTIONARIO DE REPASO.md
Segundo/1 Cuatrimestre/SO/Ejercicios Teoría/: Tema 2 Repaso de conceptos.md
Segundo/1 Cuatrimestre/SO/Examen/: top.txt
Segundo/1 Cuatrimestre/SO/Prácticas/: Repaso Módulo I.md  Resumen Practicas.md  script.sh
Segundo/2 Cuatrimestre/AC/Prácticas/: 1.txz
Segundo/2 Cuatrimestre/ALG/Teoría/: Capítulo 1.aux  Capítulo 1.out  Capítulo 1.tex  Capítulo 1.toc
Segundo/2 Cuatrimestre/PDOO/: PDOO Resumen Teoría.md  README
Tercero/: hola.txt  prueba  script.py
Tercero/1 Cuatrimestre/FBD/: Resumen Prácticas SQL.md
Tercero/1 Cuatrimestre/FBD/SQL/: adicional1-1.sql  adicional1-10.sql  adicional1-2.sql  adicional1-3.sql  adicional1-4.sql  adicional1-5.sql  adicional1-6.sql  adicional1-7.sql  adicional1-8.sql  ejemplo1-1.sql  ejemplo2-2.sql  ejemplo2-3.sql  ejemplo2-5.sql  ejercicio1-1.sql  ejercicio1-6.sql  ejercicio1-7.sql  ejercicio1-8(Corregir).sql  ejercicio3-19.sql  ejercicio3-20.sql  ejercicio3-21.sql  ejercicio3-22.sql  (+35 more)
Tercero/1 Cuatrimestre/MC/: flex.md
Tercero/2 Cuatrimestre/IA/: EntregaPractica1.tar
(+1136 files in other folders)
